Update Terraform AWS for Elasticsearch 7.x deploy  (#68)
* Packer and Terraform AWS configurations update for ES 7

* Handle ES7 bootstrapping issue using extra bootstrap node

* Update .gitignore

* Fix discovery on single-node, merge user_data scripts

* Code cleanup and G1GC jvm setting

* Use autoscaling groups name for queries, fix trying to mount a volume on bootstrap node

* Bash syntax fixes

* Fix discovery on single-node mode

* Update JAVA_HOME to OpenJDK 11